# artifacts-mmo

./: .gitignore  Cargo.toml  README.md  gen-openapi.sh  openapi.json
charts/: first_loop.d2
openapi/: Cargo.toml  README.md
openapi/src/apis/: accounts_api.rs  achievements_api.rs  badges_api.rs  characters_api.rs  configuration.rs  default_api.rs  effects_api.rs  errors.rs  events_api.rs  grand_exchange_api.rs  items_api.rs  leaderboard_api.rs  maps_api.rs  mod.rs  monsters_api.rs  my_account_api.rs  my_characters_api.rs  npcs_api.rs  resources_api.rs  tasks_api.rs  token_api.rs
openapi/src/models/: account_achievement_schema.rs  account_details.rs  account_details_schema.rs  account_leaderboard_schema.rs  account_leaderboard_type.rs  account_status.rs  achievement_response_schema.rs  achievement_rewards_schema.rs  achievement_schema.rs  achievement_type.rs  action_type.rs  active_event_schema.rs  add_account_schema.rs  add_character_schema.rs  announcement_schema.rs  badge_condition_schema.rs  badge_response_schema.rs  badge_schema.rs  bank_extension_schema.rs  bank_extension_transaction_response_schema.rs  bank_extension_transaction_schema.rs  bank_gold_transaction_response_schema.rs  bank_gold_transaction_schema.rs  bank_item_transaction_response_schema.rs  bank_item_transaction_schema.rs  bank_response_schema.rs  bank_schema.rs  blocked_hits_schema.rs  change_password.rs  character_fight_data_schema.rs  character_fight_response_schema.rs  character_leaderboard_schema.rs  character_leaderboard_type.rs  character_movement_data_schema.rs  character_movement_response_schema.rs  character_response_schema.rs  character_rest_data_schema.rs  character_rest_response_schema.rs  character_schema.rs  character_skin.rs  (+118 more)
src/: actions.rs  app.rs  lib.rs  macros.rs  main.rs
src/api/: character.rs  characters.rs  client.rs  compatibility.rs  configuration.rs  endpoint.rs  errors.rs  maps.rs  mod.rs  monsters.rs  my_characters.rs
src/api/characters/actions/: mod.rs
src/api/characters/models/: action.rs  character.rs  character_rest.rs  cooldown.rs  mod.rs
src/api/clients/: api_client.rs  character_client.rs  mod.rs
src/models/: character.rs  cooldown.rs  fight.rs  map.rs  mod.rs  monster.rs  movement.rs  rest.rs
src/widgets/: character_info.rs  mod.rs
