[package]
name = "artifacts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "6.0.0"
dotenv = "0.15.0"
iced = { version = "0.13.1", features = ["advanced", "tokio"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
openapi = { path = "./openapi" }
rand = "0.9.0"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
thiserror = "2.0.12"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.44.0", features = [
  "tracing",
  "parking_lot",
  "rt-multi-thread",
  "full",
] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
  "tracing-log",
  "parking_lot",
  "env-filter",
] }
tui-menu = "0.3.0"
tui-widget-list = "0.13.2"
url = { version = "2.5.4", features = ["serde"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release-opt]
inherits = "release"
codegen-units = 1
debug = false
lto = true
incremental = false
opt-level = 3
strip = "debuginfo"
