[package]
name = "artifacts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derivative = "2.2.0"
dotenvy_macro = "0.15.7"
futures = "0.3.31"
governor = "0.10.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["json", "gzip", "multipart"] }
retry = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "parking_lot", "env-filter"] }
tui-logger = { version = "0.17.3", features = ["tracing-support"] }
