[package]
name = "artifacts"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derivative = "2.2.0"
derive_setters = "0.1.7"
dotenvy_macro = "0.15.7"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["json", "gzip", "multipart"] }
reqwest-middleware = { version = "0.4.2", features = ["multipart", "json"] }
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_with = "3.14.0"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
  "tracing-log",
  "parking_lot",
  "env-filter",
] }
tui-logger = { version = "0.17.3", features = ["formatter", "tracing-support"] }
